--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <h1>RANDOM QUOTE GENERATOR</h1>
         
         <p id="quote"></p>
+        <blockquote id="author"></blockquote>
         <button class="quote" id="randomQuote">Click me to generate a random quote</button>
-        <script src="./quotes.txt" type="text/javascipt"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script src="js/main.js" type="text/javascript"></script>
     </div>
     
